--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,21 @@
 name: flutter_google_places
 description: Google places autocomplete widgets for flutter. No wrapper, use https://pub.dev/packages/google_maps_webservice
-version: 0.4.0
+version: 0.4.1
 repository: https://github.com/fluttercommunity/flutter_google_places
+publish_to: none
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=3.2.5 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   google_api_headers: ^1.3.0
-  google_maps_webservice: ^0.0.20-nullsafety.5
-  http: ^0.13.4
+  google_maps_webservice: 
+   git:
+    url: https://github.com/timzprof/google_maps_webservice.git
+    ref: '0.0.21' # branch name
+  http: ^1.2.1
   rxdart: ^0.27.5
 
 dev_dependencies:
